--- a/active_records/test/fixtures/categories.yml
+++ b/active_records/test/fixtures/categories.yml
@@ -1,11 +1,12 @@
 # == Schema Information
 #
-# Table name: courses
+# Table name: categories
 #
 #  id         :integer          not null, primary key
-#  title      :string           default("")
+#  title      :string
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  visible    :boolean          default(TRUE)
 #
 
 one:
